Use Task Providers for task initialization
This change improves performance by leveraging Gradle's lazy task configuration, avoiding the immediate creation and configuration of the source `SpotlessTask`. The corresponding test suites have been updated to reflect this shift from direct task creation to task registration with providers.